fix: fixing documentation and http status code
